# es_study_poc

./: Dockerfile  README.md  ab.sh  docker-compose.yml  env  local_16cores_test  local_16threads_test_actix  local_16threads_test_warp
app/: Cargo.toml
app/src/: actix_app.rs  lib.rs  main.rs  warp_app.rs
app/src/lib/: mod.rs
app_node/: index.js  package-lock.json  package.json
docker/: env.tmpl  start.sh
